<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bargain Bytes</string>

    <!-- Activity Titles -->
    <string name="title_activity_games_search">Search Games</string>
    <string name="title_activity_all_deals">All Deals</string>

    <string-array name="deal_list_type">
        <item>Deal Rating</item>
        <item>Steam Reviews</item>
        <item>Metacritic Score</item>
        <item>Newest Deals</item>
        <item>Release Date</item>
        <item>Top Saving</item>
        <item>Lowest Price</item>
    </string-array>

    <string name="rating_subtitle">Rating %.01f</string>
    <string name="steam_rating_subtitle">Steam rating %d</string>
    <string name="metacritic_subtitle">Metascore %d</string>
    <string name="date_updated_subtitle">Updated on %s</string>
    <string name="release_date_subtitle">Released on %s</string>
    <string name="release_date_future_subtitle">Releases on %s</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh_deals">Refresh Deals</string>
    <string name="action_search_games">Search Games</string>
    <string name="search_results">search results</string>
    <string name="cheapest_price">Cheapest Price</string>
    <string name="no_results_found">No results found</string>
    <string name="go_back">Go back</string>
    <string name="deal_rating">Deal rating</string>
    <string name="last_updated">Last updated</string>
    <string name="use_all_stores">All Stores</string>
    <string name="new_deals">New Deals</string>
    <string name="releases">Releases</string>
    <string name="released">Released</string>
    <string name="store_filter">Stores Filter</string>
    <string name="active_stores_header_title">Interested in</string>
    <string name="inactive_stores_header_title">Not interested in</string>
    <string name="choose_store_dialog_title">Choose Store</string>
    <string name="watch_list">Watch List</string>
    <string name="add_to_watch_list">Add To Watch List</string>
    <string name="edit_watch_list">Edit Watch List</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="any_sale">Any Sale</string>
    <string name="custom_price">Custom Price</string>
    <string name="set_price_to_track_game_at">You will be notified if this item drops below: %1$s</string>
    <string name="track_game_at_any_price">You will be notified whenever this item is on sale.</string>
    <string name="empty_watchlist">Your Watch List is empty. Keep track of games you want by adding them through the Deal or Search screens.</string>
    <string name="watchlist_item_added">%1$s has been added to your Watch List.</string>
    <string name="watchlist_item_edited">%1$s Watch List entry modified.</string>
    <string name="watchlist_item_removed">%1$s has been removed from your Watch List.</string>
    <string name="max_watchlist_item_warning">You can only have a maximum of %1$d items in your Watch List.</string>
    <string name="watch_list_notification_title_singular">Bargain Byte</string>
    <string name="watch_list_notification_title_plural">Bargain Bytes</string>
    <string name="watch_list_notification_multiple_items_description">%1$d items in your Watch List are currently on sale!</string>
    <string name="watch_list_notification_item_entry">%1$s on sale for %2$s</string>
    <string name="watch_list_notification_more_items_available">and %1$d more</string>

    <string name="deal_list_savings_percent"><![CDATA[<b>%d%%</b><br/><small>Savings</small>]]></string>


    <string name="currency">Currency</string>
    <string name="choose_currency_dialog_title">Choose displayed currency</string>
    <string name="currency_disclaimer">Please note that for currencies different from USD $, the prices are estimated using current rates.</string>
    <string name="loading_deal">Loading Deal</string>
    <string name="game_at_store">&lt;b>%1$s&lt;/b> on %2$s</string>
    <string name="saving_short">Saving</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="feedback">Feedback</string>
    <string name="ok">OK</string>
    <string name="rate_bargain_bytes">Rate Bargain Bytes</string>
    <string name="share_bargain_bytes">Share Bargain Bytes</string>
    <string name="share_app_subject">Check out this great game deal app!</string>
    <string name="share_app_text">Bargain Bytes helps me stay on top of the best game deals and discounts! Get it at: %1$s</string>
    <string name="share_deal">%1$s at %2$s off. Just another great #BargainByte found using %3$s</string>
    <string name="share_watched_item">%1$s is in my #BargainByte Watch List so I will know when it\'s on sale! Tracked using %2$s</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="try_again">Try Again</string>

    <string name="error">Error</string>
    <string name="error_no_connection">Can\'t load data. Please check your connection and try again.</string>
    <string name="error_no_results">No results found - please try again later.</string>
    <string name="error_no_deals">Can\'t load deals right now</string>
    <string name="error_no_stores">Can\'t access game stores. Are you connected to the internet? Bargain Bytes needs an internet connection to function correctly.</string>
    <string name="error_no_currency_exchange">Currency exchange data not available. Please try again later.</string>
    <string name="error_cannot_load_deal_url">Cannot load this deal right now.</string>
    <string name="load_stores_error">Can\'t load stores right now.</string>

    <string name="cd_game_image">Game image</string>
    <string name="deal_percent">%1$d</string>
    <string name="amount">£%1$d</string>

</resources>
